--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <h1 class="landing__page">Landing Page</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
             In accusamus error impedit.</p>
-            <a href="#"><button class="med__btn">Read More</button></a>
+            <a href="#"><button>Read More</button></a>
         </div>
         <div class="right">
             <img src="./assests/undraw_in-the-office_ma2b.svg" alt="office logo">
